--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,15 @@
     height: 350px;
     overflow-y: scroll;
 }
+
+.orders-title {
+    position: absolute;
+    margin-left: 600px;
+    margin-top: 70px;
+}
+
+.clients-title {
+    position: absolute;
+    margin-left: 200px;
+    margin-top: 70px;
+}
